--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "motion": "^12.23.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.3.1",
