--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
-MongoDB Configuration
+# MongoDB Configuration
 MONGODB_URI=mongodb+srv://selfraushaniimt_db_user:DwhHTaOlNfSbQioP@khaf-fulfillment.mocyw3r.mongodb.net/khaf_fulfillment
+
 # Server Configuration
 PORT=5000
 NODE_ENV=development
