--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "clsx": "^2.1.1",
     "debug": "^4.4.1",
     "framer-motion": "^12.23.12",
-    "lucide-react": "^0.542.0",
+    "lucide-react": "^0.544.0",
     "motion": "^12.23.12",
+    "nodemailer": "^7.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
@@ -44,5 +45,21 @@
     "globals": "^16.3.0",
     "tw-animate-css": "^1.3.8",
     "vite": "^7.1.2"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SelfRaushan/edison3pl.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SelfRaushan/edison3pl/issues"
+  },
+  "homepage": "https://github.com/SelfRaushan/edison3pl#readme"
 }
