--- a/backend/package.json
+++ b/backend/package.json
@@ -11,16 +11,15 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.7",
-    "@radix-ui/react-card": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-textarea": "^1.0.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.0",
