--- a/.env
+++ b/.env
@@ -1,13 +1,8 @@
-MongoDB Configuration
-MONGODB_URI=mongodb+srv://selfraushaniimt_db_user:DwhHTaOlNfSbQioP@khaf-fulfillment.mocyw3r.mongodb.net/khaf_fulfillment
+
+MONGODB_URI=mongodb+srv://khaf-fulfillment:L@hore100@khaf-fulfillment.mgbaln6.mongodb.net/khaf-fulfillment?retryWrites=true&w=majority
 # Server Configuration
 PORT=5000
 NODE_ENV=development
-
-# Email Configuration (Optional - for email notifications)
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
-NOTIFICATION_EMAIL=rkcrater7@gmail.com
 
 # Security
 JWT_SECRET=your-jwt-secret-key
